crates/am-cli/src/server/snapshots/am__server__tests__am_activate_response.snap
---
source: crates/am-cli/src/server.rs
expression: json
---
{
  "activated": "[count]",
  "stats": {
    "conscious": 0,
    "episodes": 1,
    "n": 21
  }
}
