crates/am-cli/src/server/snapshots/am__server__tests__am_buffer.snap
---
source: crates/am-cli/src/server.rs
expression: json
---
{
  "buffer_size": 1,
  "episode_created": null
}
