crates/am-cli/src/server/snapshots/am__server__tests__am_import.snap
---
source: crates/am-cli/src/server.rs
expression: json
---
{
  "imported": true,
  "stats": {
    "conscious": 0,
    "episodes": 1,
    "n": 21
  }
}
