crates/am-cli/src/server/snapshots/am__server__tests__am_ingest.snap
---
source: crates/am-cli/src/server.rs
expression: json
---
{
  "episode": "snapshot-test",
  "neighborhoods": "[count]",
  "occurrences": "[count]"
}
