crates/am-cli/src/server/snapshots/am__server__tests__am_salient.snap
---
source: crates/am-cli/src/server.rs
expression: json
---
{
  "stats": {
    "conscious": 1,
    "episodes": 0,
    "n": 3
  },
  "stored": 1
}
