crates/am-cli/src/server/snapshots/am__server__tests__am_stats_with_content.snap
---
source: crates/am-cli/src/server.rs
expression: json
---
{
  "activation": {
    "max": 0,
    "mean": 0.0,
    "zero_count": 21
  },
  "conscious": 0,
  "db_size_bytes": 69632,
  "episodes": 1,
  "n": 21
}
